# kafka_oneshot

./: .gitignore  Acknowledgements.md  Cargo.toml  Readme.md  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: rust.yml
src/: main.rs
