[package]
name = "kafka_oneshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
clap = { version = "4.5.7", features = ["derive"] }
rdkafka = { version = "0.36.2", features = [
  "ssl-vendored",
  "gssapi",
  "libz",
  "zstd",
] }
serde_json = "1.0.128"
tokio = { version = "1.38.0", features = ["full"] }
